implement: interactive panels

--- a/Assets/Source/Environment/Game.Environment.asmdef
+++ b/Assets/Source/Environment/Game.Environment.asmdef
@@ -1,3 +1,16 @@
 {
-	"name": "Game.Environment"
+    "name": "Game.Environment",
+    "rootNamespace": "",
+    "references": [
+        "GUID:851b42b81c1721e4cb5ce9e86f5c107e"
+    ],
+    "includePlatforms": [],
+    "excludePlatforms": [],
+    "allowUnsafeCode": false,
+    "overrideReferences": false,
+    "precompiledReferences": [],
+    "autoReferenced": true,
+    "defineConstraints": [],
+    "versionDefines": [],
+    "noEngineReferences": false
 }
